--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,5 @@
         android:id="@+id/log_toRegistrazione"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="vai a registrazione" />
+        android:gravity="center_horizontal" />
 </LinearLayout>
