--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -53,7 +53,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
-                android:text="Seleziona università:" />
+                android:text="Seleziona università:"
+                android:layout_marginEnd="10dp" />
 
             <Spinner
                 android:id="@+id/reg_universita"
