--- a/app/src/main/res/layout/row_layout_home.xml
+++ b/app/src/main/res/layout/row_layout_home.xml
@@ -7,13 +7,14 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
+            android:id="@+id/row_image_home"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="20dp"
             app:srcCompat="@android:drawable/star_big_on" />
     </LinearLayout>
 
