--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,6 +14,16 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="INFORMAZIONI AULE"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="24sp"
+            app:fontFamily="@font/marko_one" />
+
         <Button
             android:id="@+id/mappa"
             android:layout_width="match_parent"
@@ -32,6 +42,16 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="INFORMAZIONI AULE"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="24sp"
+            app:fontFamily="@font/marko_one" />
 
         <Button
             android:id="@+id/lista"
