--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,6 +30,12 @@
             android:layout_height="wrap_content"
             android:text="vai a mappa aule" />
 
+        <ProgressBar
+            android:id="@+id/bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <ListView
             android:id="@+id/elencoAule"
             android:layout_width="match_parent"
