--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -13,8 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="REGISTRAZIONE"
-        android:textColor="@android:color/holo_red_dark"
+        android:text="Registrazione"
+        android:textColor="@color/intestazione"
         android:textSize="24sp"
         app:fontFamily="@font/marko_one" />
 
@@ -70,7 +70,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Inserisci matricola:" />
+                android:text="Inserisci matricola/codice docente:" />
 
             <EditText
                 android:id="@+id/reg_matricola"
