--- a/app/src/main/res/layout/activity_registrazione.xml
+++ b/app/src/main/res/layout/activity_registrazione.xml
@@ -70,7 +70,7 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Inserisci matricola/codice docente:" />
+                android:text="Inserisci matricola:" />
 
             <EditText
                 android:id="@+id/reg_matricola"
