--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#09b863</color>
     <color name="colorPrimaryDark">#19bf6f</color>
     <color name="colorAccent">#20e887</color>
-    <color name="intestazione">#1bbf88</color>
+    <color name="intestazione">#19bf6f</color>
 </resources>
