--- a/app/src/main/res/layout/activity_info_aula.xml
+++ b/app/src/main/res/layout/activity_info_aula.xml
@@ -47,18 +47,19 @@
             android:layout_height="1dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:background="#000000" />
+            android:background="#70000000" />
 
         <TextView
             android:id="@+id/infoAula_settimana"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <HorizontalScrollView
             android:id="@+id/h_scroll"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
@@ -70,6 +71,33 @@
                 android:baselineAligned="false"
                 android:orientation="horizontal" />
         </HorizontalScrollView>
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="#70000000" />
+
+        <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/infoAula_flexLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            app:flexWrap="wrap"
+            app:alignItems="stretch"
+            app:alignContent="stretch" >
+
+            <TextView
+                android:id="@+id/infoAula_servizi"
+                android:text="Servizi Disponibili"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </com.google.android.flexbox.FlexboxLayout>
 
         <ProgressBar
             android:id="@+id/bar2"
