--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="INFORMAZIONI AULE"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="@color/intestazione"
             android:textSize="24sp"
             app:fontFamily="@font/marko_one" />
 
