--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#09b863</color>
-    <color name="colorPrimaryDark">#19bf6f</color>
+    <color name="colorPrimary">#19bf6f</color>
+    <color name="colorPrimaryDark">#0E8E50</color>
     <color name="colorAccent">#20e887</color>
     <color name="intestazione">#19bf6f</color>
+    <color name="button_text">#FFFFFF</color>
+
 </resources>
