--- a/app/src/main/res/layout/activity_info_aula.xml
+++ b/app/src/main/res/layout/activity_info_aula.xml
@@ -112,7 +112,7 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:background="#4CAF50" />
+                android:background="@color/colorPrimary" />
 
             <LinearLayout
                 android:id="@+id/infoAula_orari"
@@ -162,7 +162,7 @@
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
-                android:background="#4CAF50" />
+                android:background="@color/colorPrimary" />
 
             <LinearLayout
                 android:layout_width="match_parent"
