--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#19bf6f</color>
     <color name="colorPrimaryDark">#0E8E50</color>
     <color name="colorAccent">#20e887</color>
-    <color name="intestazione">#19bf6f</color>
+    <color name="intestazione">#19BF6F</color>
     <color name="button_text">#FFFFFF</color>
 
 </resources>
