--- a/app/src/main/res/layout/activity_iscrizione.xml
+++ b/app/src/main/res/layout/activity_iscrizione.xml
@@ -7,6 +7,16 @@
     tools:context=".IscrizioneActivity">
 
     <TextView
+        android:id="@+id/output"
+        android:layout_width="166dp"
+        android:layout_height="16dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.05" />
+
+    <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
