--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,9 +106,16 @@
                 android:hint="password"
                 android:importantForAutofill="no"
                 android:inputType="textPassword" />
+
         </TableRow>
 
     </TableLayout>
+
+    <CheckBox
+        android:id="@+id/checkRicordami"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ricordami (non dovrai più effettuare il login fino a quando ti disconnetterai)" />
 
     <Button
         android:id="@+id/btn_login"
