--- a/app/src/main/res/layout/dialog_scegli_gruppo.xml
+++ b/app/src/main/res/layout/dialog_scegli_gruppo.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/scegliGruppo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Seleziona il gruppo per cui vuoi prenotare:" />
 
     <GridView
         android:id="@+id/grigliaGruppi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="100dp"
-        android:gravity="center"
-
-        android:horizontalSpacing="40dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
         android:numColumns="auto_fit"
-        android:stretchMode="spacingWidthUniform"
-        android:verticalSpacing="24dp" />
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="20dp" />
+
+    <Button
+        android:id="@+id/annullaSelezioneGruppo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Annulla" />
+
 </LinearLayout>
