--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#20e887</color>
     <color name="intestazione">#19BF6F</color>
     <color name="button_text">#FFFFFF</color>
+    <color name="verde_trasparente">#bfe3c3</color>
 
 </resources>
