--- a/app/src/main/res/layout/dialog_check_componenti.xml
+++ b/app/src/main/res/layout/dialog_check_componenti.xml
@@ -8,6 +8,7 @@
         android:id="@+id/txtDialog"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/grigio_chiaro"
         android:text="Seleziona i componenti:" />
 
     <ListView
