--- a/app/src/main/res/layout/dialog_errore_gruppi.xml
+++ b/app/src/main/res/layout/dialog_errore_gruppi.xml
@@ -9,6 +9,7 @@
         android:id="@+id/txtTitoloDialogErrore"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/grigio_chiaro"
         android:text="ERRORE" />
 
     <TextView
