--- a/app/src/main/res/layout/row_layout_scegli_gruppo.xml
+++ b/app/src/main/res/layout/row_layout_scegli_gruppo.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/forma_griglia_gruppi">
 
     <ImageView
         android:id="@+id/imageView8"
@@ -23,11 +24,10 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
-            android:background="@color/verde_trasparente"
             android:shadowColor="@color/colorPrimary"
             android:text="TextView"
             android:textColor="#000000"
-            android:textSize="18sp" />
+            android:textSize="12sp" />
 
     </LinearLayout>
 
